doctorapp/force-app/main/default/objects/Return__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>Manager approval.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS Returns Approved</relationshipLabel>
    <relationshipName>POS_Returns_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>