doctorapp/force-app/main/default/objects/Return__c/fields/Original_Sale__c.field-meta.xml
<CustomField>
    <fullName>Original_Sale__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>References the original Sale.</description>
    <label>Original Sale</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>