doctorapp/force-app/main/default/objects/Return__c/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <description>Refund method.</description>
    <label>Refund Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>StoreCredit</fullName>
                <label>Store Credit</label>
            </value>
            <value>
                <fullName>OriginalPayment</fullName>
                <default>true</default>
                <label>Original Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>