doctorapp/force-app/main/default/objects/Return__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Return processing date.</description>
    <label>Return Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>