doctorapp/force-app/main/default/objects/Return__c/fields/Return_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Number__c</fullName>
    <description>Generated return identifier.</description>
    <externalId>true</externalId>
    <label>Return Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>