doctorapp/force-app/main/default/objects/Return__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Cashier processing the return.</description>
    <label>Processed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS Returns Processed</relationshipLabel>
    <relationshipName>POS_Returns_Processed</relationshipName>
    <type>Lookup</type>
</CustomField>