doctorapp/force-app/main/default/objects/Return__c/validationRules/Non_Negative_Refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Refund</fullName>
    <active>true</active>
    <description>Refund amount cannot be negative.</description>
    <errorConditionFormula>Refund_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Refund Amount cannot be negative.</errorMessage>
    <errorDisplayField>Refund_Amount__c</errorDisplayField>
</ValidationRule>